# Kalanet-application2

./: .ninja_deps  .ninja_log  Ad.cpp  Ad.h  AdsBrowserWindow.cpp  AdsBrowserWindow.h  AuthService.cpp  AuthService.h  CMakeCache.txt  CMakeLists.txt  SignUpWindow.cpp  SignUpWindow.h  User.h  addadwindow.cpp  addadwindow.h  adminpanel.cpp  adminpanel.h  build.ninja  cartwindow.cpp  cartwindow.h  cmake_install.cmake  database.cpp  database.h  jsonhandler.cpp  jsonhandler.h  loginwindow.cpp  loginwindow.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  profilewindow.cpp  profilewindow.h  qtcsettings.cmake  servercore.cpp  servercore.h  walletwindow.cpp  (+1 more)
.cmake/api/v1/reply/: cache-v2-fef7ebb343b26e883d02.json  cmakeFiles-v1-06a700fbd3925f98370f.json  codemodel-v2-b764936d73af13c03b15.json  directory-.-Debug-be090594ae48a57793ab.json  index-2026-02-10T07-18-23-0655.json  target-KalaNetQt-Debug-71d5d5f4274c5bdf923d.json  target-KalaNetQt_autogen-Debug-9599f07b9ce765a1b50d.json  target-KalaNetQt_autogen_timestamp_deps-Debug-705de84c46b039601666.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AuthService.cpp.EA2A7E3E61CF0EE9.idx  AuthService.h.7C60DCDD2E10846F.idx  User.h.79758D9EC1BA9F1C.idx  main.cpp.DC1DFC8FD844C91C.idx  mainwindow.cpp.A6BB65723BF67353.idx  mainwindow.h.53CE3D2474915E8E.idx  qdialog.h.11F8F761B0185428.idx
KalaNetQt_autogen/: deps
KalaNetQt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
KalaNetQt_autogen/include/: ui_MainWindow.h
